# AVRWithCMake

./: Dockerfile  README.md  docker-compose.yml
app/: CMakeLists.txt
app/cmake/: avr_toolchain.cmake
app/src/: CMakeLists.txt  main.cpp
